@@ -1,0 +1,9 @@
+<?php
+
+namespace meteocontrol\client\vcomapi\model;
+
+class ExtendedAddress extends Address {
+
+    /** @var string */
+    public $streetAddition;
+}
